--- a/index.html
+++ b/index.html
@@ -139,8 +139,8 @@ font-family: 'Laila', sans-serif;
 
 <!-- Facebook comments start -->
 
-<div class="fb-comments" data-href="https://unifiedmarathi.in" data-width="250px" data-numposts="9999"></div>
-<span class="fb-comments-count" data-href="https://rakshak53.github.io/"></span>
+<div class="fb-comments" data-href="https://rakshak53.github.io" data-width="" data-numposts="9999"></div>
+<span class="fb-comments-count" data-href="https://rakshak53.github.io"></span>
 awesome comments 
 
 <!-- Facebook comments end -->
