--- a/index.html
+++ b/index.html
@@ -45,14 +45,15 @@ font-family: 'Laila', sans-serif;
 
 body {
 font-family: 'Laila', sans-serif;
+color:#4d4d4d;
 }
 
 .mobile-container {
   max-width: 480px;
   margin: auto;
-  background-color: #555;
+  background-color: #f2f2f2;
   height: 1000px;
-  color: white;
+  color: #4d4d4d;
   border-radius: 10px;
 }
 
@@ -139,7 +140,7 @@ font-family: 'Laila', sans-serif;
 
 <!-- Facebook comments start -->
 
-<div class="fb-comments" data-href="https://rakshak53.github.io" data-width="" data-numposts="9999"></div>
+<div class="fb-comments" data-href="https://rakshak53.github.io" data-width="250" data-numposts="99"></div>
 <span class="fb-comments-count" data-href="https://rakshak53.github.io"></span>
 awesome comments 
 
