--- a/index.html
+++ b/index.html
@@ -3,6 +3,68 @@
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<meta property="fb:app_id" content="1168586930602249" />
+<meta property="fb:admins" content="100002244118190"/>
+<meta name="google-site-verification" content="R7j-Z7gHwdvVj3FmEkViWOxvFgjVxp_vZd0HYVuaDoM"/>
+
+<title>RAKSHAK.TECH</title>
+<meta name="description" content="A description of the page" />
+<meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
+<link rel="canonical" href="https://rakshak53.github.io">
+<!-- This is the URL for this page -->
+
+<!-- This is the og:* meta from the original version of the page -->
+<meta property="og:locale" content="en_IN" />
+<meta property="og:type" content="article" />
+<meta property="og:site_name" content="RAKSHAK.TECH" />
+
+<meta property="article:section" content="technology" />
+<meta property="article:tag" content="android" />
+
+
+<meta property="og:title" content="your_link_title" />
+<meta property="og:url" content="https://rakshak53.github.io" />
+<meta property="og:image" content="your_image_url" />
+<meta property="og:description" content="How much does culture influence creative thinking?" />
+
+
+
+
+
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1168586930602249&autoLogAppEvents=1" nonce="Wi3Fr9ff"></script>
+
+<!-- like button -->
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1168586930602249&autoLogAppEvents=1" nonce="Xlz5fWOq"></script>
+
+<!-- comments plugin -->
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1168586930602249&autoLogAppEvents=1" nonce="g1MKdzaV"></script>
+
+
+<script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '{your-app-id}',
+      cookie     : true,
+      xfbml      : true,
+      version    : '{api-version}'
+    });
+      
+    FB.AppEvents.logPageView();   
+      
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "https://connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script>
+
+
+
 <style>
 *{
   margin: 0px;
@@ -136,6 +198,17 @@ background-color:grey;
 box-shadow: 2px 5px 10px 5px #00000030;
 }
 
+.center-dp{
+text-align:center;
+margin-bottom:20px;
+}
+
+.center-dp img{
+border-radius:50px;
+width:70px;
+height:70px;
+}
+
 /* Responsive layout - when the screen is less than 800px wide, make the two columns stack on top of each other instead of next to each other */
 @media screen and (max-width: 800px) {
   .leftcolumn, .rightcolumn {   
@@ -166,8 +239,11 @@ box-shadow: 2px 5px 10px 5px #00000030;
 
 
 </style>
+
 </head>
 <body>
+
+<div id="fb-root"></div>
 
 <!-- Simulate a smartphone / tablet -->
 <div class="mobile-container">
@@ -318,8 +394,30 @@ end of menu
       <h3>Follow Me</h3>
       <p>Some text..</p>
     </div>
+    <div class="widget">
+      <h3>About Me</h3>
+      <p class="center-dp">admin</p>
+	<p class="center-dp">
+<img src="https://s.gravatar.com/avatar/e7498aab356cd7c32518ddff100f7928?s=70">
+
+</img></p>
+<p>rakshak  ( <a href="https://m.me/rakshakbhatkar">rakshak53 </a>) is a new blogger who is trying his luck in blogging.he is a part-time blogger who specialise in blogging with tech related topics.
+</p>
+    </div>
   </div>
 </div>
+
+<!-- Facebook comments start -->
+
+<span class="fb-comments-count" data-href="https://rakshak53.github.io"></span>
+awesome comments 
+
+<div class="fb-comments" data-href="https://rakshak53.github.io" data-width="100%" data-numposts="99"></div>
+
+<!-- Facebook comments end -->
+
+
+
 
 <div class="footer">
   <h2>Footer</h2>
