--- a/index.html
+++ b/index.html
@@ -129,12 +129,43 @@ body {
 
 
 /* Header/Blog Title */
+
 .header {
-  padding: 30px;
-  font-size: 40px;
-  text-align: center;
-  background: white;
+  overflow: hidden;
+  background-color: #f1f1f1;
+  padding: 20px 10px;
 }
+
+.header a {
+  float: left;
+  color: black;
+  text-align: center;
+  padding: 12px;
+  text-decoration: none;
+  font-size: 18px; 
+  line-height: 25px;
+  border-radius: 4px;
+}
+
+.header a.logo {
+  font-size: 25px;
+  font-weight: bold;
+}
+
+.header a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.header a.active {
+  background-color: dodgerblue;
+  color: white;
+}
+
+.header-right {
+  float: right;
+}
+
 
 
 /* Create two unequal columns that floats next to each other */
@@ -186,9 +217,13 @@ body {
 .footer {
   padding: 20px;
   text-align: center;
-  background: #ddd;
+  background: #292929;
+  color:#ddd;
   margin-top: 20px;
 }
+.footer a{color:#878787;}
+
+.footer a:hover{color:#91795d;}
 
 .post{
 margin:10px;
@@ -268,8 +303,14 @@ end of menu
 
 
 <div class="header">
-  <h2>Blog Name</h2>
+  <a href="#default" class="logo">CompanyLogo</a>
+  <div class="header-right">
+    <a class="active" href="#home">Home</a>
+    <a href="#contact">Contact</a>
+    <a href="#about">About</a>
+  </div>
 </div>
+
 
 <div class="row">
   <div class="leftcolumn">
@@ -420,7 +461,9 @@ awesome comments
 
 
 <div class="footer">
-  <h2>Footer</h2>
+
+  <div>Footer</div>
+  <div class="copyrt">Copyright 2023. blog maintain by <a href="rakshak.in">rakshak53</a></div>
 </div>
 
 
