--- a/p/about.html
+++ b/p/about.html
@@ -241,7 +241,7 @@ color:#7e4cfc;
 .post{
 margin:10px;
 margin-bottom:40px;
-padding:10px;
+padding:0px;
 }
 .post a{text-decoration:none;
 	color:#3c2180;}
@@ -252,6 +252,11 @@ padding:10px;
 .post-content{
 font-size:18px;
 line-height:32px;}
+.fb-comments-count{
+margin:10px;}
+
+.fb-comments{
+margin:10px;}
 
 .center-dp{
 text-align:center;
