--- a/p/about.html
+++ b/p/about.html
@@ -252,11 +252,14 @@ padding:0px;
 .post-content{
 font-size:18px;
 line-height:32px;}
+
 .fb-comments-count{
-margin:10px;}
+width:100%;
+margin:20px;}
 
 .fb-comments{
-margin:10px;}
+margin:10px;
+width:100%;}
 
 .center-dp{
 text-align:center;
