--- a/p/about.html
+++ b/p/about.html
@@ -258,8 +258,9 @@ width:100%;
 margin:20px;}
 
 .fb-comments{
+padding:20px;
 margin:10px;
-width:70%;}
+width:80%;}
 
 .center-dp{
 text-align:center;
@@ -366,7 +367,7 @@ height:70px;
 <span class="fb-comments-count" data-href="https://rakshak53.github.io/p/about.html"></span>
 awesome comments 
 
-<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="100%" data-numposts="99"></div>
+<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="50%" data-numposts="99"></div>
 
 <!-- Facebook comments end -->
    </div>
