--- a/p/about.html
+++ b/p/about.html
@@ -258,9 +258,8 @@ width:100%;
 margin:20px;}
 
 .fb-comments{
-padding:20px;
 margin:10px;
-width:80%;}
+width:70%;}
 
 .center-dp{
 text-align:center;
@@ -365,9 +364,9 @@ height:70px;
 <!-- Facebook comments start -->
 
 <span class="fb-comments-count" data-href="https://rakshak53.github.io/p/about.html"></span>
-awesome comments 
+<p style="margin-left:20px;">awesome comments </p>
 
-<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="50%" data-numposts="99"></div>
+<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="70%" data-numposts="99"></div>
 
 <!-- Facebook comments end -->
    </div>
