--- a/p/about.html
+++ b/p/about.html
@@ -366,8 +366,9 @@ height:70px;
 <span class="fb-comments-count" data-href="https://rakshak53.github.io/p/about.html"></span>
 <p style="margin-left:20px;">awesome comments </p>
 
-<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="70%" data-numposts="99"></div>
-
+<div style="width:90%;background:grey;">
+<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="100%" data-numposts="99"></div>
+</div>
 <!-- Facebook comments end -->
    </div>
   
