--- a/p/disclaimer.html
+++ b/p/disclaimer.html
@@ -9,9 +9,9 @@
 <meta name="google-site-verification" content="R7j-Z7gHwdvVj3FmEkViWOxvFgjVxp_vZd0HYVuaDoM"/>
 
 <title>RAKSHAK.TECH - ABOUT</title>
-<meta name="description" content="About page" />
+<meta name="description" content="Disclaimer page" />
 <meta name="keywords" content="keyword 1, keyword 2, keyword 3"/>
-<link rel="canonical" href="https://rakshak53.github.io/p/about.html">
+<link rel="canonical" href="https://rakshak53.github.io/p/disclaimer.html">
 <!-- This is the URL for this page -->
 
 <!-- This is the og:* meta from the original version of the page -->
@@ -24,7 +24,7 @@
 
 
 <meta property="og:title" content="your_link_title" />
-<meta property="og:url" content="https://rakshak53.github.io/p/about.html" />
+<meta property="og:url" content="https://rakshak53.github.io/p/disclaimer.html" />
 <meta property="og:image" content="your_image_url" />
 <meta property="og:description" content="How much does culture influence creative thinking?" />
 
@@ -374,11 +374,11 @@ height:70px;
 
 <div id="fb-root"></div>
 
-<span class="fb-comments-count" data-href="https://rakshak53.github.io/p/about.html"></span>
+<span class="fb-comments-count" data-href="https://rakshak53.github.io/p/disclaimer.html"></span>
 <p style="margin-left:20px;">awesome comments </p>
 
 <div style="width:90%;margin:10px;">
-<div class="fb-comments" data-href="https://rakshak53.github.io/p/about.html" data-width="100%" data-numposts="99"></div>
+<div class="fb-comments" data-href="https://rakshak53.github.io/p/disclaimer.html" data-width="100%" data-numposts="99"></div>
 </div>
 <!-- Facebook comments end -->
    </div>
