--- a/amp/template.html
+++ b/amp/template.html
@@ -164,7 +164,7 @@ line-height:32px;
 font-size:20px;
 }
 .paragraph{
-margin-top:30px;
+margin-top:20px;
 margin-bottom:20px;
 color:#4d4d4d;
 line-height:32px;
@@ -377,15 +377,15 @@ table{border-collapse: collapse; font-family: arial, sans-serif; width: 100%;}
 
 .highlightbox1{background-color: #ffa778; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
-.highlightbox2{background-color: #81e3a7; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
+.highlightbox2{background-color: #0c6878; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
-.highlightbox3{background-color: #a078ff; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
+.highlightbox3{background-color: #7a4a17; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
-.highlightbox4{background-color: #78acff; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
+.highlightbox4{background-color: #7a1737; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
-.highlightbox5{background-color: #b078ff; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
+.highlightbox5{background-color: #63177a; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
-.highlightbox6{background-color: #78c2ff; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
+.highlightbox6{background-color: #299191; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
 .highlightbox7{background-color: #293f91; color: white; padding: 5px 12px 10px 20px;margin:20px 0px;}
 
