--- a/index.html
+++ b/index.html
@@ -290,11 +290,11 @@ height:70px;
 <div class="topnav">
   <a href="https://rakshak53.github.io" class="active">Rakshak.tech</a>
   <div id="myLinks">
-    <a href="https://rakshak53.github.io">About</a>
-    <a href="https://rakshak53.github.io">Contact</a>
-    <a href="https://rakshak53.github.io">Disclaimer</a>
-    <a href="https://rakshak53.github.io">Privacy Policy</a>
-    <a href="https://rakshak53.github.io">Terms</a>
+    <a href="https://rakshak53.github.io/p/about.html">About</a>
+    <a href="https://rakshak53.github.io/p/contact.html">Contact</a>
+    <a href="https://rakshak53.github.io/p/disclaimer.html">Disclaimer</a>
+    <a href="https://rakshak53.github.io/p/privacy.html">Privacy Policy</a>
+    <a href="https://rakshak53.github.io/p/terms.html">Terms</a>
   </div>
   <a href="javascript:void(0);" class="icon" onclick="myFunction()">
     <i class="fa fa-bars"></i>
@@ -308,12 +308,12 @@ height:70px;
 <div class="header">
   <a href="https://rakshak53.github.io" class="logo">Rakshak.tech</a>
   <div class="header-right">
-    <a class="activeeee" href="#home">Home</a>
-    <a href="https://rakshak53.github.io">About</a>
-    <a href="https://rakshak53.github.io">Contact</a>
-    <a href="https://rakshak53.github.io">Disclaimer</a>
-    <a href="https://rakshak53.github.io">Privacy Policy</a>
-    <a href="https://rakshak53.github.io">Terms</a>
+    <a class="activeeee" href="https://rakshak53.github.io">Home</a>
+    <a href="https://rakshak53.github.io/p/about.html">About</a>
+    <a href="https://rakshak53.github.io/p/contact.html">Contact</a>
+    <a href="https://rakshak53.github.io/p/disclaimer.html">Disclaimer</a>
+    <a href="https://rakshak53.github.io/p/privacy.html">Privacy Policy</a>
+    <a href="https://rakshak53.github.io/p/terms.html">Terms</a>
   </div>
 </div>
 
@@ -473,7 +473,7 @@ awesome comments
 
 <div class="footer">
 
-  <div>Footer</div>
+  <div></div>
   <div class="copyrt">Copyright 2023. blog maintain by <a href="https://rakshak53.github.io">rakshak53</a></div>
 </div>
 
